RESOLVED FIXED156985
Stop listening for "media can start" notifications when media player is cleared
https://bugs.webkit.org/show_bug.cgi?id=156985
Summary Stop listening for "media can start" notifications when media player is cleared
Eric Carlson
Reported 2016-04-25 11:02:56 PDT
Stop listening for page notifications when the media player is cleared.
Attachments
Proposed patch. (3.80 KB, patch)
2016-04-25 11:31 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2016-04-25 11:03:26 PDT
Eric Carlson
Comment 2 2016-04-25 11:31:05 PDT
Created attachment 277263 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2016-04-25 11:32:55 PDT
Attachment 277263 [details] did not pass style-queue: ERROR: Source/WebCore/html/HTMLMediaElement.cpp:5600: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2016-04-25 12:37:44 PDT
Eric Carlson
Comment 5 2016-04-25 12:44:58 PDT
(In reply to comment #1) > <rdar://problem/23158505> This is the wrong Radar number. The correct number is <rdar://problem/25862536>
Note You need to log in before you can comment on or make changes to this bug.