Stop listening for "media can start" notifications when media player is cleared https://bugs.webkit.org/show_bug.cgi?id=156985 <rdar://problem/23158505>

Reviewed by Jer Noble.

No new tests, I have not been able to create a test that reliably reproduces this.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadInternal): Add logging.
(WebCore::HTMLMediaElement::selectMediaResource): Assert and return early if there is
  no media player.
(WebCore::HTMLMediaElement::clearMediaPlayer): Stop listening for can start notifications.
(WebCore::HTMLMediaElement::visibilityStateChanged): Add logging.
(WebCore::HTMLMediaElement::mediaCanStart): Ditto.


Canonical link: https://commits.webkit.org/175095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200039 268f45cc-cd09-0410-ab3c-d52691b4dbfc